--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,38 @@
-html,
-body {
-  height: 100%;
+.App {
+  text-align: center;
 }
 
-#container {
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.chat-logs {
-  flex: 1;
-  overflow: auto;
-}
-.one-chat-log {
-  /* height: 100%; */
-  overflow: auto;
-  border-bottom: 1px solid;
-  background-color: chartreuse;
-}
-.one-chat-log :last-child {
-  border: none;
+.App-link {
+  color: #61dafb;
 }
 
-footer {
-  background-color: aqua;
-}
-header {
-  background-color: peachpuff;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
