--- a/src/App.css
+++ b/src/App.css
@@ -3,24 +3,15 @@ body {
   margin: 0;
 }
 
-#container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+header {
+  background-color: #182c61;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
   width: 100%;
-  background-color: #f1f2f6;
-}
-
-.chat-logs {
-  flex: 1;
-  overflow-y: auto;
-  flex-direction: column;
-  margin: 8vh;
-  background-color: #f1f2f6;
-}
-.one-chat-log {
-  margin: 0;
-  width: 100%;
+  color: white;
+  height: 8vh;
+  font-size: 6.5vh;
 }
 
 footer {
@@ -31,13 +22,109 @@ footer {
   width: 100%;
   height: 8vh;
 }
-header {
-  background-color: #182c61;
-  overflow: hidden;
-  position: fixed;
-  top: 0;
+
+#container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   width: 100%;
+  /* background-color: #f1f2f6; */
+}
+
+.one-chat-container {
+  margin-right: 1rem;
+  margin-left: 1rem;
+  /* margin-left: auto; */
+  /* max-width: 50vh; */
+}
+
+.chat-logs {
+  flex: 1;
+  overflow-y: auto;
+  flex-direction: column;
+  margin: 8vh 0 8vh 0;
+  background-color: #f1f2f6;
+  float: right;
+}
+
+.one-chat-log {
+  font-size: 1.4rem;
+  padding: 1rem 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 0.9rem;
+  /* width: auto; */
+  text-align: center;
   color: white;
-  height: 8vh;
-  font-size: 6.5vh;
+  background-color: #ff4757;
+  display: table-cell;
+}
+
+.one-chat-user {
+  color: #ff6b81;
+  font-size: 0.8rem;
+  text-align: right;
+  margin-top: 0;
+}
+
+.one-chat-container:last-child {
+  animation: fadeInFromBottom ease 3s;
+  -webkit-animation: fadeInFromBottom ease 3s;
+  -moz-animation: fadeInFromBottom ease 3s;
+  -o-animation: fadeInFromBottom ease 3s;
+  -ms-animation: fadeInFromBottom ease 3s;
+}
+@keyframes fadeInFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    /* transform: translateY(0); */
+  }
+}
+
+@-moz-keyframes fadeInFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    /* transform: translateY(0); */
+  }
+}
+
+@-webkit-keyframes fadeInFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    /* transform: translateY(0); */
+  }
+}
+
+@-o-keyframes fadeInFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    /* transform: translateY(0); */
+  }
+}
+
+@-ms-keyframes fadeInFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    /* transform: translateY(0); */
+  }
 }
