--- a/src/App.css
+++ b/src/App.css
@@ -68,9 +68,21 @@ button:active {
   justify-content: center;
   flex-direction: column;
   color: #ff4757;
+  animation: fadeInFromBottom ease 1s;
+  -webkit-animation: fadeInFromBottom ease 1s;
+  -moz-animation: fadeInFromBottom ease 1s;
+  -o-animation: fadeInFromBottom ease 1s;
+  -ms-animation: fadeInFromBottom ease 1s;
 }
 .login-input {
+  font-size: 3vh;
+  margin: 2vh;
 }
+
+.login-field {
+  font-size: 3vh;
+}
+
 .one-chat-log {
   font-size: 3.5vh;
   padding: 1rem 1rem;
