--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,12 @@ button:active {
   pointer-events: none;
   border: 2px solid #182c61;
 }
+
+.disable-input-text {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
 @keyframes fadeInFromBottom {
   0% {
     opacity: 0;
